# mtasemotif

./: .gitignore  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg  todo.md
.github/workflows/: ci.yml  release.yml
docs/: database_setup.md  nanomotif_comparison.md
mtase_motif/: candidate_discovery.py  cli.py  config.py  hmmer.py  logging_utils.py  methylation.py  mmcif.py  motif_inference.py  motifs.py  panel.py  pipeline_support.py  qc.py  rebase_search.py  runner.py  scanning.py  util.py
mtase_motif/db/: __init__.py  base.py  manifest.py
mtase_motif/db/data/: pfam_models.txt  tigrfams_models.txt
mtase_motif/db/providers/: __init__.py  pfam.py  rebase.py  tigrfams.py
mtase_motif/structure_motif/: __init__.py  foldseek.py  template_panel.py  training.py  validation.py
tests/: test_cli.py  test_hmmer.py  test_methylation.py  test_mmcif.py  test_motif_inference_revisions.py  test_motifs.py  test_no_rebase_bundling.py  test_packaging_release.py  test_panel.py  test_pfam_provider.py  test_qc.py  test_rebase_provider_smoke.py  test_structure_motif.py  test_util.py  test_workflow_core.py
