[metadata]
name = mtasemotif
version = attr: mtase_motif.__version__
description = Local-first MTase candidate + methylation motif prediction pipeline
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    bioinformatics
    methylation
    genomics
    dna

[options]
packages = find:
python_requires = >=3.9
install_requires =
    rich>=13.7.1
    typer>=0.12.3
include_package_data = True

[options.packages.find]
include =
    mtase_motif*

[options.entry_points]
console_scripts =
    mtase-motif = mtase_motif.cli:main

[options.extras_require]
dev =
    build>=1.2.2
    pytest>=8.0.0
    ruff>=0.6.0
    twine>=5.1.1

[options.package_data]
mtase_motif =
    db/data/*.txt
